--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <p><a class="botao" href="#produtos">VEJA OS PRODUTOS</a></p>
         </div>
         <div class="coluna">
-            <img src="./assets/img/banner.png" alt="prato">
+            <img src="./assets/img/Banner.png" alt="prato">
         </div>
     </section>
 
@@ -289,3 +289,4 @@
 </body>
 
 </html>
+
